# connected-component-labeling

./: CMakeLists.txt  README.md  build.sh
src/: ccl.cpp
